Correct rotating text overflow

--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -1,11 +1,14 @@
 /* HEADER & NAVBAR */
-
 header {
     font-family: 'Roboto', sans-serif;
     font-weight: 200;
     background-color: white;
     background-size: cover;
     min-height: 100vh;
+}
+
+nav a {
+    color: #1e272e!important;
 }
 
 .title-accent {
@@ -55,7 +58,6 @@ header {
 /* BODY */
 
 /* Rotating text */
-
 .rotating-text {
     position: absolute;
     left: 0;
@@ -65,7 +67,7 @@ header {
     font-weight: 300;
     font-size: 10vw;
     color: rgba(255, 255, 255, 0.8);
-    width: 100%;
+    width: 95vw;
 }
 
 .rotating-text p {
